Keyboard Shortcuts + Sundry fixes
Updated Keyboard shortcuts:
- Full screen, to F11
- Delete to "Delete"
- Show display settings to "D"

Also:
- Showing toolbar before focusing it for Ctrl+T
- Tooltips inclue keyboard shortcuts
- Updated FAQ to include keyboard shortcuts

Fixes:
- Hamburger focus rect was black, should be white
- Blurry on single line titles in article list improved
- Fixed crash using context menu button on keyboard

--- a/App/css/colours.css
+++ b/App/css/colours.css
@@ -38,7 +38,7 @@ button.win-splitviewpanetoggle[aria-expanded=false] {
     border-width: 1px;
 }
 
-.signedIn-container > button.win-splitviewpanetoggle.win-keyboard:focus {
+.signedIn-container button.win-splitviewpanetoggle.win-keyboard:focus {
     border-color: white;
 }
 
